core/errors/src/main/java/com/example/errors/UnauthorizedException.kt
package com.example.errors

class UnauthorizedException : BaseNetworkException()
